# polars-ai

./: .gitignore  Cargo.toml  README.md
examples/: basic-usage.ipynb
examples/datasets/: flights.csv
src/: cli.rs  dataframe.rs  error.rs  lib.rs  main.rs  nlp.rs  utils.rs
