[package]
name = "polars-ai"
version = "0.0.1"
edition = "2021"
description = "A CLI and a library for interacting with Polars DataFrames using natural language queries and AI."
license = "MIT"
repository = "https://github.com/wiseaidev/polars-ai"
documentation = "https://docs.rs/polars-ai"
readme = "README.md"
keywords = ["polars", "polars ai", "rust", "dataframe"]
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
exclude = ["/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
eval = "0.4.3"
evalexpr = "11.1.0"
polars = { version = "0.34.2", features = ["csv"] }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }

[lib]
name = "polars_ai"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
